--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(HodgeDecomp)
 export(WhitneyMap1f_BC)
 export(complex_to_boundaryF)
 export(deRahmMap1f)
+export(makedf)
+export(vplot)
 import(Rcpp)
 import(RcppEigen)
 importFrom(Rcpp,evalCpp)
